[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sprites/vs_01.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://Sprites/steak.png" type="Texture" id=3]
[ext_resource path="res://Sprites/vs_02.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 38.6791, 10 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 19.5 )

[sub_resource type="Animation" id=6]
resource_name = "dead"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Attack/AttackBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Attack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/platform_check/pc:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, 0.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "walk_right"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachine" id=12]
states/dead/node = SubResource( 14 )
states/dead/position = Vector2( 275, 164 )
states/walk_left/node = SubResource( 8 )
states/walk_left/position = Vector2( 190, 58 )
states/walk_right/node = SubResource( 9 )
states/walk_right/position = Vector2( 448, 74 )
transitions = [ "walk_left", "walk_right", SubResource( 10 ), "walk_right", "walk_left", SubResource( 11 ), "walk_left", "dead", SubResource( 15 ), "walk_right", "dead", SubResource( 16 ) ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -0.0872665
texture = ExtResource( 1 )

[node name="platform_check" type="Area2D" parent="Sprite"]
collision_layer = 32
collision_mask = 68

[node name="pc" type="CollisionShape2D" parent="Sprite/platform_check"]
position = Vector2( -23.5457, -0.597579 )
shape = SubResource( 5 )

[node name="Attack" type="Sprite" parent="Sprite"]
position = Vector2( -14.0985, 1.80343 )
texture = ExtResource( 3 )

[node name="AttackBox" type="Area2D" parent="Sprite/Attack" groups=[
"AttackBox",
"EnemyBox",
]]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Attack/AttackBox"]
position = Vector2( -13, 0 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 3.5 )
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="." groups=[
"EnemyBox",
"HurtBox",
]]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 6 )
anims/walk_left = SubResource( 4 )
anims/walk_right = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="area_entered" from="Sprite/platform_check" to="." method="_on_platform_check_area_entered"]
[connection signal="body_entered" from="Sprite/platform_check" to="." method="_on_platform_check_body_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
